--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "next": "14.2.4",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.24.0"
